--- a/TaskManager.Backend/TaskManager.Backend/TaskManager.Backend.csproj
+++ b/TaskManager.Backend/TaskManager.Backend/TaskManager.Backend.csproj
@@ -12,6 +12,8 @@
 
   <ItemGroup>
     <Folder Include="Controllers\" />
+    <Folder Include="Configurations\" />
+    <Folder Include="Models\Validations\" />
   </ItemGroup>
 
 </Project>
