feat(backend): instalar las dependencias necesarias para la migración, además de migrar el modelo Tarea

--- a/TaskManager.Backend/TaskManager.Backend/appsettings.json
+++ b/TaskManager.Backend/TaskManager.Backend/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SqlServerConnection": "Server=LAPTOP-04JRNK84; Database=TaskManager; Trusted_Connection=True; Encrypt=False;"
+  }
 }
